--- a/dashboard/html/Inventario/agregarProducto.html
+++ b/dashboard/html/Inventario/agregarProducto.html
@@ -17,11 +17,11 @@
         <div class="table-responsive">
             <table class="table__productos">
                 <tr>
-                    <td>nombre Producto</td>
-                    <td>categoria</td>
-                    <td>unidad</td>
-                    <td>cantidad</td>
-                    <td>precio(Und)</td>
+                    <td>Nombre Producto</td>
+                    <td>Categoria</td>
+                    <td>Unidad</td>
+                    <td>Cantidad</td>
+                    <td>Precio(Und)</td>
                 </tr>
                 <form action="" name="formu">
                 <tr>
