--- a/dashboard/html/domicilios/agregarPedidoParaEnvio.html
+++ b/dashboard/html/domicilios/agregarPedidoParaEnvio.html
@@ -11,6 +11,7 @@
  -->
     <title>Document</title>
 </head>
+
 <body>
     <div class="container__table">
         <h1>Enviar a Domicilio</h1>
@@ -18,13 +19,13 @@
         <div class="table-responsive">
             <table class="table__pedido--enviar">
                 <tr>
-                    <td>nombre domiciliario</td>
-                    <td>nombre cliente</td>
-                    <td>numero cliente</td>
+                    <td>Nombre domiciliario</td>
+                    <td>Nombre cliente</td>
+                    <td>Numero cliente</td>
                     <td>Descripcion</td>
                     <td>Direccion</td>
     
-                    <td>total a cobrar</td>
+                    <td>Total a cobrar</td>
                 </tr>
                 <form action="" name="formu">
                 <tr>
