--- a/dashboard/html/domicilios/pedidosRealizados.html
+++ b/dashboard/html/domicilios/pedidosRealizados.html
@@ -18,15 +18,15 @@
         <div class="table-responsive">
             <table>
                 <tr>
-                    <td>estado</td>
-                    <td>numero pedido</td>
-                    <td>nombre domiciliario</td>
-                    <td>comentario domiciliario</td>
+                    <td>Estado</td>
+                    <td>Numero pedido</td>
+                    <td>Nombre domiciliario</td>
+                    <td>Comentario domiciliario</td>
     
-                    <td>fecha</td>
-                    <td>nombre cliente</td>
-                    <td>numero cliente</td>
-                    <td>total a cobrar</td>
+                    <td>Fecha</td>
+                    <td>Nombre cliente</td>
+                    <td>Numero cliente</td>
+                    <td>Total a cobrar</td>
                 </tr>
                 <tr>
                     <td class="status" style="background-color: orange;">En proceso</td>
