--- a/dashboard/html/registroPedidos/pedidosDomicilio.html
+++ b/dashboard/html/registroPedidos/pedidosDomicilio.html
@@ -16,19 +16,19 @@
         <div class="table-responsive">
             <table>
                 <tr>
-                    <td>estado</td>
-                    <td>id pedido</td>
-                    <td>nombre cliente</td>
-                    <td>numero cliente</td>
-                    <td>direccion</td>
-                    <td>descripcion</td>
-                    <td>total cobrar</td>
-                    <td>acciones</td>
+                    <td>Estado</td>
+                    <td>Id pedido</td>
+                    <td>Nombre cliente</td>
+                    <td>Numero cliente</td>
+                    <td>Direccion</td>
+                    <td>Descripcion</td>
+                    <td>Total cobrar</td>
+                    <td>Acciones</td>
                 </tr>
                 <tr>
                     <td class="status" style="background-color: red;">pendiente</td>
                     <td>12A32E</td>
-                    <td>thomas jimenez</td>
+                    <td>Thomas jimenez</td>
                     <td>3005632341</td>
                     <td>calle 12 #23 12</td>
                     <td>
@@ -45,7 +45,7 @@
                 <tr>
                     <td class="status" style="background-color: red;">pendiente</td>
                     <td>12A32E</td>
-                    <td>thomas jimenez</td>
+                    <td>Thomas jimenez</td>
                     <td>3005632341</td>
                     <td>calle 12 #23 12</td>
                     <td>
@@ -62,7 +62,7 @@
                 <tr>
                     <td class="status" style="background-color: orange;">En proceso</td>
                     <td>12A32E</td>
-                    <td>thomas jimenez</td>
+                    <td>Thomas jimenez</td>
                     <td>3005632341</td>
                     <td>calle 12 #23 12</td>
                     <td>
