--- a/dashboard/html/Inventario/visualizarProductos.html
+++ b/dashboard/html/Inventario/visualizarProductos.html
@@ -17,18 +17,18 @@
 
             <table>
                 <tr>
-                    <td>nombre</td>
-                    <td>categoria</td>
-                    <td>unidad</td>
-                    <td>cantidad</td>
-                    <td>precio(Und)</td>
-                <td>ultima fecha de ingreso</td>
-                <td>disponibilidad</td>
-                <td>precio total</td>
+                    <td>Nombre</td>
+                    <td>Categoria</td>
+                    <td>Unidad</td>
+                    <td>Cantidad</td>
+                    <td>Precio(Und)</td>
+                <td>Ultima fecha de ingreso</td>
+                <td>Disponibilidad</td>
+                <td>Precio total</td>
             </tr>
             <tr>
-                <td>pechuga</td>
-                <td>carnes</td>
+                <td>Pechuga</td>
+                <td>Carnes</td>
                 <td>Lb</td>
                 <td>40</td>
                 <td>5000</td>
@@ -37,8 +37,8 @@
                 <td>$200.000</td>
             </tr>
             <tr>
-                <td>tomate</td>
-                <td>verdura</td>
+                <td>Tomate</td>
+                <td>Verdura</td>
                 
                 <td>Lb</td>
                 <td>8</td>
@@ -48,8 +48,8 @@
                 <td>$31.000</td>
             </tr>
             <tr>
-                <td>lechuga</td>
-                <td>verdura</td>
+                <td>Lechuga</td>
+                <td>Verdura</td>
                 
                 <td>Lb</td>
                 <td>0</td>
