--- a/dashboard/html/dashboard.html
+++ b/dashboard/html/dashboard.html
@@ -13,6 +13,11 @@
  -->
     <title>Dashboard</title>
 </head>
+<style>
+    tr{
+        text-transform: capitalize;
+    }
+</style>
 <body>
       <header>
     <div class="navbar navbar-expand-lg navbar-light ">
