--- a/dashboard/html/registroPedidos/pedidosRecojeTienda.html
+++ b/dashboard/html/registroPedidos/pedidosRecojeTienda.html
@@ -16,16 +16,16 @@
         <div class="table-responsive">
             <table>
                 <tr>
-                    <td>estado</td>
-                    <td>id pedido</td>
-                    <td>nombre cliente</td>
-                    <td>descripcion</td>
-                    <td>total cobrar</td>
+                    <td>Estado</td>
+                    <td>Id pedido</td>
+                    <td>Nombre cliente</td>
+                    <td>Descripcion</td>
+                    <td>Total cobrar</td>
                 </tr>
                 <tr>
                     <td class="status" style="background-color: orange;">En proceso</td>
                     <td>12A32E</td>
-                    <td>thomas jimenez</td>
+                    <td>Thomas jimenez</td>
                     <td>
                         <ul>
                             <li>Cocacola 1.4</li>
